# PeriScope

./: .gitignore  README.md  pyproject.toml
periscope/: __init__.py  __main__.py  app.py  cli.py  ephemeris.py  sites.py  targets.py
target_lists/: MBC.lst  NEMBC.lst  aa_year1_paper.lst
tests/: test_cli.py  test_ephemeris.py  test_filters.py
